# veloren-inventory-bot

./: Cargo.toml  README.org
src/: main.rs
