[package]
name = "veloren-inventory-bot"
version = "0.1.0"
authors = [ "HumanoidSandvichDispenser <humanoidsandvichdispenser@gmail.com>" ]
description = "A Veloren bot that acts as a bank or extended inventory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
specs = { git = "https://github.com/amethyst/specs.git", rev = "d4435bdf496cf322c74886ca09dd8795984919b4" }
veloren = "0.1.0"
veloren-client = { git = "https://gitlab.com/veloren/veloren.git", branch = "master" }
veloren-common = { git = "https://gitlab.com/veloren/veloren.git", branch = "master", features = ["no-assets"]  }
clap = "3.2.17"
rust_decimal = "1.26"